Attempted to fix dropdown button issues on small screens and footer wrapping

--- a/src/global/footer.css
+++ b/src/global/footer.css
@@ -8,6 +8,7 @@ footer {
 .footerLinks {
     color: rgb(8, 45, 73);
     padding-left: 0.3rem;
+    white-space: nowrap;
 }
 
 .footerLinks:hover {
