--- a/src/global/navbar.css
+++ b/src/global/navbar.css
@@ -7,6 +7,7 @@
 #titleWrapper h1 {
     color: white;
     font-size: 1.3rem;
+    text-align: center;
 }
 
 #titleWrapper {
@@ -15,10 +16,7 @@
     align-items: center;
     gap: 10px;
     justify-content: space-between;
-}
-
-#titleWrapper h1 {
-    text-align: center;
+    flex-shrink: 0;
 }
 
 .blueBackground {
@@ -27,12 +25,10 @@
 
 .d-none {
     max-height: 0;
-    transition: 2ms all ease;
 }
 
 .d-show {
     max-height: 500px;
-    transition: 2ms all ease;
 }
 
 #dropdownButton {
@@ -46,8 +42,8 @@
     list-style: none;
     text-align: center;
     background-color: white;
-    transition: all 0.3s ease;
     overflow: hidden;
+    transition: 0.5s all ease;
 }
 
 #desktopNavList {
